# main/app/dto/req/instant.go
@@ -198,3 +198,8 @@ type InstantOrderCheckReq struct {
 type OrderUnlockReq struct {
 	SaleBillUuid uint64 `json:"sale_bill_uuid"` // 销售账单UUID, 必填
 }
+
+type OrderInvoiceInfoReq struct {
+	SaleBillUuid  uint64 `form:"sale_bill_uuid"`  // 销售账单UUID, 必填
+	SaleOrderUuid uint64 `form:"sale_order_uuid"` // 销售订单UUID, 必填
+}
